# fast-matching-engine

./: .gitignore  CMakeLists.txt  README.md  perf_annotate.txt  perf_report.txt  run_bench.sh  run_tests.sh
benchmarks/: bench_engines.cpp
include/common/: allocators.h  bitset.h  i_engine.h  intrusive_list.h  order.h  types.h
include/engines/: engine_array.h  engine_array_intrusive.h  engine_bitset.h  engine_bitset_intrusive.h  engine_naive.h  engine_naive_intrusive.h
tests/: test_correctness.cpp
